--- a/public/tonkatsu.css
+++ b/public/tonkatsu.css
@@ -24,6 +24,16 @@ header{
     width:100%;
 }
 
+footer{
+    clear: both;
+    border-top: 1px solid #666;
+    margin: 20px 0 0;
+    padding: 10px;
+    text-align: center;
+    font-size: 83%;
+    color: #333;
+}
+
 
 #wrapper{
     margin: 0 auto;
